<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bb_search"
        android:icon="@drawable/ic_search"
        android:title="@string/bb_search"
        />

    <item
        android:id="@+id/bb_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/bb_favorites"
        />

    <item
        android:id="@+id/bb_responses"
        android:icon="@drawable/ic_responses"
        android:title="@string/bb_responses"
        />

    <item
        android:id="@+id/bb_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/bb_messages"
        />

    <item
        android:id="@+id/bb_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/bb_profile"
        />

</menu>