<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">
    
    <ImageView
        android:id="@+id/ic_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text1"
        android:textColor="@color/ed_hint_text"
        android:text="@string/resume_for_response"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/ic_avatar"
        app:layout_constraintTop_toTopOf="@id/ic_avatar"
        />

    <TextView
        android:id="@+id/tv_name_of_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title3"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/tv_resume"
        app:layout_constraintBottom_toBottomOf="@id/ic_avatar"
        />
    
    <View
        android:id="@+id/v_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/ed_background"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_avatar"
        />

    <TextView
        android:id="@+id/tv_add_accompanying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonText1"
        android:textColor="@color/b_green_background"
        android:text="@string/add_accompanying"
        android:layout_marginTop="71dp"
        app:layout_constraintTop_toBottomOf="@id/v_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <EditText
        android:id="@+id/et_your_accompanying"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:background="@android:color/transparent"
        style="@style/Text1"
        android:textColorHint="@color/ed_hint_text"
        android:textColor="@color/white"
        android:hint="@string/your_accompanying"
        android:gravity="start"
        android:visibility="gone"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_line"
        />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_respond"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/b_green_background"
        android:text="@string/respond"
        style="@style/ButtonText1"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_accompanying"

        />



</androidx.constraintlayout.widget.ConstraintLayout>