<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".presentation.fragment.VerificationCodeFragment">

    <TextView
        android:id="@+id/tv_code_sent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/code_was_sent"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textSize="20sp"
        android:gravity=""
        android:layout_marginTop="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_write_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/write_code"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_code_sent"
        app:layout_constraintEnd_toEndOf="@id/tv_code_sent"
        app:layout_constraintTop_toBottomOf="@id/tv_code_sent"
        />

    <LinearLayout
        android:id="@+id/ll_code_cells"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_write_code"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/ed_background"
            app:cardCornerRadius="8dp"
            android:layout_marginEnd="8dp"
            >
            <EditText
                android:id="@+id/et_code1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textSize="24sp"
                android:textColor="@color/ed_hint_text"
                android:textColorHint="@color/ed_hint_text"
                android:hint="*"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/ed_background"
            app:cardCornerRadius="8dp"
            android:layout_marginEnd="8dp"
            >
            <EditText
                android:id="@+id/et_code2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textSize="24sp"
                android:textColor="@color/ed_hint_text"
                android:textColorHint="@color/ed_hint_text"
                android:hint="*"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/ed_background"
            app:cardCornerRadius="8dp"
            android:layout_marginEnd="8dp"
            >
            <EditText
                android:id="@+id/et_code3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textSize="24sp"
                android:textColor="@color/ed_hint_text"
                android:textColorHint="@color/ed_hint_text"
                android:hint="*"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/ed_background"
            app:cardCornerRadius="8dp"
            >
            <EditText
                android:id="@+id/et_code4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textSize="24sp"
                android:textColor="@color/ed_hint_text"
                android:textColorHint="@color/ed_hint_text"
                android:hint="*"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"
        android:text="@string/confirm"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textColor="@color/b_not_active_text"
        android:textSize="16sp"
        android:backgroundTint="@color/b_not_active_background"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/ll_code_cells"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>